syntax = "proto3";
option go_package = "/pb";
package pb;
//// 注册开发帐号
//message RegisterDevReq {
//  string accountName = 1; // 帐号名
//  string password = 2;    // 密码
//  string ip = 3;          // ip地址
//}
// 用户信息
message GetUserIDReq {
  int32  sdkId = 1;    // sdk id
  int32  pid = 2;      // 包id
  string openId = 3;   // sdk的openid
  int32  serverId = 4; // 所在游戏服id
}
message GetUserIDResp {
  int64  uid = 1;      // 用户id
}
message Request {
  string sid = 1;
  string route = 2;
  bytes data = 3;
}
message Response {
  string sid = 1;
  string route = 2;
  int32 code = 3;
  string message = 4;
  bytes data = 5;
}
message ErrorResponse {
  int32  code = 1;      // 错误码
  string message = 2;   // 错误内容
}
